--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <footer class="bg-white border-t border-gray-200 mt-16">
         <div class="max-w-7xl mx-auto py-8 px-4 sm:px-6 lg:px-8">
             <div class="text-center text-gray-500 text-sm">
-                <p>&copy; 2024 PDF OCR Converter. Dibuat dengan ❤️ menggunakan Tailwind CSS dan Flowbite.</p>
+                <p>&copy; 2024 PDF OCR Converter. Dibuat dengan💡menggunakan Tailwind CSS dan Flowbite.</p>
             </div>
         </div>
     </footer>
